# autoclicker

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: update_version.py  validate_version.py
src/autoclicker/: app.py  cli.py
tests/: conftest.py  test_cursor_lock.py  test_hotkeys.py  test_import.py
