[project]
name = "autoclicker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
]

[project.optional-dependencies]
mac = [
    # PyObjC provides the Quartz module used by the preferred macOS engine
    "pyobjc-framework-Quartz>=10.3; platform_system=='Darwin'",
]

[project.scripts]
autoclicker = "autoclicker.cli:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
# Ensure the project is treated as a real package and built/installed for tools
package = true
